# netloom

./: CLAUDE.md  README.md  pyproject.toml
docs/: spec.md
docs/examples/: citations.yaml  conversations.yaml  papers.yaml
